# MitchDzugan.com.maybesomeday

./: .gitignore  Gruntfile.js  buildAndRun.sh  package.json  sos.sh
client/: Makefile  client.cabal  default.nix  packages.nix  sos  stack.yaml
client/src/: Main.hs  Sitemap.hs
client/src/Reflex/Dom/: LocalStorage.hs  Route.hs
db/db/: config.yml  schema.rb
db/db/migrate/: 20160307023708_create_authentication_token_table.rb
servant/: default.nix
servant-client/: default.nix  servant-client.cabal
server/: default.nix  server.cabal  shell.nix  sos  stack.yaml
server/src/: Lib.hs
server/src/Models/: AuthenticationToken.hs  Import.hs  RefreshToken.hs
server/static/: index.html
shared/: default.nix  shared.cabal
shared/src/Shared/: Api.hs  Other.hs
