Name: client
Version: 0.1
Synopsis: client code
Description: An implementation of the TodoMVC specification using the Reflex-DOM functional reactive DOM library
License: AllRightsReserved
License-file: LICENSE
Author: Ryan Trinkle
Maintainer: ryan.trinkle@gmail.com
Stability: Experimental
Category: FRP
Build-type: Simple
Cabal-version: >=1.8

executable client
  hs-source-dirs: src
  main-is: Main.hs
  build-depends:
    base,
    reflex,
    ghcjs-dom == 0.2.*,
    reflex-dom,
    containers,
    file-embed,
    text,
    safe,
    mtl,
    transformers,
    shared,
    http-client,
    servant,
    servant-client
  other-extensions: TemplateHaskell
  ghc-prof-options: -fprof-auto
  ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
